--- a/css/_base.scss
+++ b/css/_base.scss
@@ -20,16 +20,16 @@ body {
 	height: 100%;
 }
 section {
-	margin:0 auto 0;
-	padding:4em 0 4em;
-	text-align: center;
+	margin:0 auto 18rem;
+	padding:0;
+	position: relative;
 }
 article {
 	padding:0;
 	margin:0 auto;
-	max-width:1000px;
+	max-width: 1140px;
 	h3 {
-		font-size:2rem;
+		font-size:4.8rem;
 		padding:18px 0;
 		font-weight:400;
 	}
@@ -62,10 +62,7 @@ section .button.disabled {
 	background:$color_light_grey;
 	color:$color_nobel;
 }
-img {
-	width:100%;
-	height:auto;
-}
+
 //Global page Elements
 .top {
 	position: fixed;
@@ -88,26 +85,15 @@ img {
 	height: $size_100;
 	position: relative;
 }
-.jumbotron {
-	text-align: center;
-	background:$color_splash_page;
-	padding:44px;
-	margin: 64px 0 0;
-	.title {
-		width:40%;
-		margin: 0 auto;
-	}
-	h3, p {
-		color:$white;
-	}
-	h3 {
-		font-size:3rem;
-		margin:1.6rem 0;
-	}
-	.fab {
-		font-size:7rem;
-		padding:18px 24px;
-		color:$color_fab;
-		
-	}
+#content {
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#00519f+0,002950+100 */
+background: #00519f; /* Old browsers */
+background: -moz-linear-gradient(top,  #00519f 0%, #002950 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #00519f 0%,#002950 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #00519f 0%,#002950 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00519f', endColorstr='#002950',GradientType=0 ); /* IE6-9 */
+
 }
+//Animation Left
+
+
