--- a/css/_header.scss
+++ b/css/_header.scss
@@ -8,23 +8,13 @@ header {
 		margin:0 auto;
         display: flex;
 		justify-content: space-between;
-		max-width:1080px;
+		max-width:1366px;
+		align-items: center;
 	}
 }
 .logo {
 	color: $white;
-    padding: 14px;
-    display: flex;
-	h1 {
-		color: $white;
-	}
-	p {
-		color: $color_link; 
-		line-height: 1em;
-		font-size: 1.3rem;
-		padding:0;
-
-	}
+    padding: 0;
 	.name {
 		padding: .6em 0;
 			em {
@@ -75,14 +65,14 @@ header {
 }
 
 nav {
-	display:flex;
-	margin: 30px 0 0;
+	margin:0;
 	a {
-		padding: 14px 18px;
+		padding: 1.6rem;
 		font-weight: 300;
 		font-size: 1.4rem;
 		line-height: 1.6em;
-		color:$white;
+		margin-right: 3.2rem;
+		color:$color_link;
 		&:hover {
 			color:$white;
 		}
@@ -90,6 +80,17 @@ nav {
 			padding-right: 4px;
 			color:$color_aqua;
 		}
+	
+		}
+		.contact {
+			border:1px solid #9FDAF2;
+			border-radius: 30px;
+			text-align: center;
+			padding:1rem 4.2rem;
+			&:hover {
+				color:$white;
+				background: $color_nav_mobi;
+			}
 		}
 	}
 
