--- a/css/_type.scss
+++ b/css/_type.scss
@@ -16,6 +16,7 @@ h3 {
 h4 {
 	@extend %extend_1;
 	padding:0 0 1.2em;
+	font-size: 3.2rem;
 }
 h5 {
 	@extend %extend_1;
@@ -25,7 +26,9 @@ h5 {
 p {
 	font-weight: 400;
 	@extend %extend_2;
-	padding:0 0 1em;
+	padding:0 0 2.4rem 0;
+	line-height: 3.2rem;
+	font-size: 1.6rem;
 }
 a {
 	font-weight: 400;
@@ -41,6 +44,8 @@ em {
 	font-weight: 300;
 	@extend %extend_2;
 	color: $color_aqua;
+	font-style: normal;
+	font-size: 1.6rem;
 }
 ul {
 	@extend %extend_2;
@@ -52,6 +57,13 @@ strong {
 	font-size:2rem;
 }
 
+form {
+	input, textarea, label {
+		@extend %extend_2;
+		padding:0 0 1rem;
+		font-size: 1.6rem;
+	}
+}
 
 
 
