--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -67,12 +67,9 @@
                 margin:0;
                 background-position: -20px 0;
             }
-            .fish {
+            .fish, .turtle {
                 display: none;
             }
-            .turtle {
-                position: absolute;
-                left:200px;            }
         }
         #home {
             h1 {
