--- a/css/global.css
+++ b/css/global.css
@@ -805,12 +805,8 @@ footer.sm {
     margin: 0;
     background-position: -20px 0;
   }
-  #about .fish {
+  #about .fish, #about .turtle {
     display: none;
-  }
-  #about .turtle {
-    position: absolute;
-    left: 200px;
   }
   #home h1 {
     line-height: 1.2em;
