--- a/css/_master.scss
+++ b/css/_master.scss
@@ -1,8 +1,7 @@
 // Functions, Variables, Mixins
 
 //colors
-$color_fa-skills: #cddbe8;
-$color_nav_mobi: rgba(9, 79, 153, .7);
+$color_nav_mobi: rgba(7, 63, 122, 0.7);
 $color_cape_cod: #424141;
 $color_link: #cce4ec;
 $white: #fff;
