--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -20,7 +20,7 @@
             text-align: center;
             .title {
                 width:auto;
-                margin:0;
+                margin:0 0 3.2rem;
             }
             h3 {
                 font-size: 3.2rem;
@@ -28,7 +28,7 @@
             }
             h4 {
                 font-size: 2.4rem;
-                padding:.225em 0 1.2em 0;
+                padding:0 0 1.6rem ;
             }
             
         }
@@ -61,21 +61,28 @@
         margin: 0;
             article {
             display:block;	
+            aside {
+                margin:0 0 3rem;
+            }
             }
             .title {
                 width:auto;
-                margin:0;
-                background-position: -20px 0;
+                background-position: 30px 50px;
+                background-size: 100px;
             }
             .fish, .turtle {
                 display: none;
             }
         }
         #home {
+            article {
+                width:100%;
+            }
             h1 {
                 line-height: 1.2em;
                 font-weight: 100;
                 font-size:2.4rem;
+                padding: 2rem;
             }
             .button {
                 display:none;
