--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -121,6 +121,8 @@
         }
 
         #contact {
+            background-position: 0 50px;
+            background-size:120px;
             .button {
                 display:block;
                 margin:2em auto;            
@@ -183,13 +185,7 @@
         .page .scrnshts, .page .screens {
             display:block;
         }
-    
-    #tech {
-        article {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-            }
-        }
+
     
         nav {
             display: none;
