--- a/css/global.css
+++ b/css/global.css
@@ -816,6 +816,10 @@ footer.sm {
   article {
     max-width: 100%;
   }
+  #contact {
+    background-position: 0 50px;
+    background-size: 120px;
+  }
   #contact .button {
     display: block;
     margin: 2em auto;
@@ -876,12 +880,6 @@ footer.sm {
   }
   .page .scrnshts, .page .screens {
     display: block;
-  }
-  #tech article {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
   }
   nav {
     display: none;
