--- a/css/_master.scss
+++ b/css/_master.scss
@@ -16,6 +16,7 @@ $color_nobel: #8a8888;
 $color_aqua: #9FDAF2;
 $color_logo-bg:#0f6590;
 $color_fab: #c0dbea;
+$color_navy: #013362;
 
 //sizing
 $size_100: 100%;
