--- a/css/global.css
+++ b/css/global.css
@@ -350,12 +350,6 @@ nav .contact:hover {
   padding: 0 12px 0 0;
 }
 
-.page h3 {
-  font-size: 2rem;
-  padding: 0 0 .6em;
-  font-weight: 500;
-}
-
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,7 +376,7 @@ section .title {
 }
 
 section h3 {
-  font-size: 4.8rem;
+  font-size: 3.6rem;
   font-weight: 600;
 }
 
@@ -436,7 +430,7 @@ section h3 {
 }
 
 #about .title {
-  background: url("img/img-jellyfish.png") no-repeat right;
+  background: url("img/img-jellyfish.png") no-repeat 800px;
   background-size: 190px;
   max-width: 1140px;
 }
@@ -452,11 +446,12 @@ section h3 {
   grid-column-gap: 4rem;
   -ms-grid-rows: auto auto;
       grid-template-rows: auto auto;
+      grid-template-areas: "a b" "a b";
 }
 
 #about article img {
-  width: 100%;
-  height: auto;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 #about .button {
@@ -479,18 +474,23 @@ section h3 {
 }
 
 #portfolio {
-  background: url(img/img-mermaid.png) no-repeat -150px 70px;
+  background: url(img/img-mermaid.png) no-repeat -200px 0;
 }
 
 #portfolio .grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-row-gap: 4rem;
   grid-column-gap: 1rem;
+}
+
+#portfolio .grid div {
+  background-color: #013362;
+  padding: 3.2rem;
 }
 
 #portfolio .grid p {
@@ -499,8 +499,9 @@ section h3 {
 }
 
 #portfolio .grid img {
-  opacity: 70%;
-  border-radius: 8px;
+  opacity: 90%;
+  height: auto;
+  width: 100%;
 }
 
 #portfolio .grid img:hover {
@@ -510,7 +511,23 @@ section h3 {
 }
 
 #contact {
-  background: url("img/img-angler.png") no-repeat 150px 70px;
+  overflow: hidden;
+}
+
+#contact .octopus {
+  position: absolute;
+  right: -1000px;
+  top: 0;
+}
+
+#contact .angler {
+  position: absolute;
+  left: 200px;
+  top: 0;
+  opacity: 30%;
+  width: 200px;
+  height: auto;
+  opacity: 30%;
 }
 
 #contact form {
