--- a/css/_header.scss
+++ b/css/_header.scss
@@ -71,7 +71,7 @@ nav {
 		font-weight: 300;
 		font-size: 1.4rem;
 		line-height: 1.6em;
-		margin-right: 3.2rem;
+		margin-left: 3.2rem;
 		color:$color_link;
 		&:hover {
 			color:$white;
