--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -22,6 +22,9 @@
 	}
 }
 section {
+	aside {
+		padding:0 3.4rem;
+	}
 	.title {
 		text-align: center;
 		margin:0 auto 8em;
@@ -41,6 +44,10 @@ section {
 	height: 100vh;
 	margin:0;
 	padding-top: 0;
+	img.logo {
+		width:85px;
+		height: auto;
+	}
 	article {
 		width:550px;
 		margin:12% auto 0;
@@ -50,7 +57,10 @@ section {
 		height:56px;
 		width: 44px;
 		margin:2rem;
+		-webkit-animation: pulse 2s infinite;
+    	animation: pulse 2s infinite;
 	}
+
 	ul {
 		text-align: center;
 		padding: 12px;
@@ -85,7 +95,6 @@ section {
 	.title {
 		background: url("img/img-jellyfish.png") no-repeat 800px;
 		background-size:190px;
-		max-width:1140px;
 		background-position: 800px 78px;
 	}
 	article {
@@ -93,13 +102,12 @@ section {
 		grid-template-columns: repeat(2, 50%);
 		grid-template-rows: repeat(2, 1fr);
 		grid-row-gap: 20rem;
-		grid-column-gap: 4rem;
+		grid-column-gap: 0;
 		grid-template-rows: auto auto;
-
 		img {
 			justify-self: end;
-			width: 100%;
-			height: auto;
+			width:100%;
+			height:auto;
 		}
 	}
 
@@ -128,7 +136,7 @@ section {
 		grid-template-rows: auto;
 		grid-row-gap: 4rem;
 		grid-column-gap: 1rem;
-		div {
+		.item {
 			background-color: $color_navy;
 			padding:3.2rem;
 		}
@@ -225,3 +233,28 @@ section {
 	}
 }
 	
+//Keyframes for Anchor Icon
+
+@-webkit-keyframes pulse {
+	0% {
+	  -webkit-transform: translate(0, 0);
+			  transform: translate(0, 0); }
+	50% {
+	  -webkit-transform: translate(0, 10px);
+			  transform: translate(0, 10px); }
+	100% {
+	  -webkit-transform: translate(0, 0);
+			  transform: translate(0, 0); } 
+			}
+  
+  @keyframes pulse {
+	0% {
+	  -webkit-transform: translate(0, 0);
+			  transform: translate(0, 0); }
+	50% {
+	  -webkit-transform: translate(0, 10px);
+			  transform: translate(0, 10px); }
+	100% {
+	  -webkit-transform: translate(0, 0);
+			  transform: translate(0, 0); }
+			 } 
