--- a/css/_header.scss
+++ b/css/_header.scss
@@ -73,8 +73,12 @@ nav {
 		line-height: 1.6em;
 		margin-left: 3.2rem;
 		color:$color_link;
-		&.home {
-		background: url("../images/svg/ico-lighthouse.svg") no-repeat ;
+		display: inline-flex;
+		flex-direction: column;
+		align-items: center;
+
+		img {
+			margin-bottom: .7rem;;
 		}
 }
 		&:hover {
@@ -86,16 +90,6 @@ nav {
 		}
 	
 		}
-		.contact {
-			border:1px solid #9FDAF2;
-			border-radius: 30px;
-			text-align: center;
-			padding:1rem 4.2rem;
-			&:hover {
-				color:$white;
-				background: $color_nav_mobi;
-			}
-		}
-	
+
 
 
