--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -27,9 +27,12 @@
         } 
     }
     @media(max-width: 768px) {
+        p, a, em, ul, strong, form input, form textarea, form labelp, a, em, ul, strong, form input, form textarea, form label {
+            font-size: 1.4rem;
+        }
         #content {
             padding:2rem;
-        }
+        } 
         section {
             padding:1.225em;
             height:auto;
@@ -52,29 +55,6 @@
                 padding:0 0 1.6rem ;
             }
             
-        }
-
-
-        #home {
-            h1 {
-                line-height: 1.2em;
-                font-weight: 100;
-                font-size:2.4rem;
-            }
-            .button {
-                display:none;
-            }
-            ul {
-                padding: 24px;
-                em {
-                    display: none;
-                }
-                li {
-                    padding: 4px;
-                    font-size: 1.6rem;
-                    display: block;
-                }
-            }
         }
 
         #about {
@@ -123,12 +103,24 @@
         #portfolio {
             background: none;
             .grid {
-                display: block;
+                display: flex;
+                overflow-x: scroll;
+                overflow-y: hidden;
+                white-space: nowrap;
+
                 p {
                     padding:0;
                 }
-                div {
-                    margin-bottom:4rem;
+                .item {
+                    flex: 0 0 auto;
+                    margin-right: 3px;
+                    width:230px;
+                    height: auto;
+                    padding:2rem;
+                    -webkit-overflow-scrolling: touch;
+                    &::-webkit-scrollbar {
+                      display: none;
+                    }
                 }
                 img {
                     width:100%;
