--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -31,7 +31,7 @@
             font-size: 1.4rem;
         }
         #content {
-            padding:2rem;
+            padding:0rem;
         } 
         section {
             padding:1.225em;
@@ -39,6 +39,9 @@
             margin: 0;
             padding:0;
             text-align: center;
+            article {
+                padding:0 1.8rem;
+            }
             aside {
                 padding:0;
             }
@@ -47,7 +50,7 @@
                 margin:0 0 3.2rem;
             }
             h3 {
-                font-size: 3.2rem;
+                font-size: 2.4rem;
                 line-height: 1.2em;
             }
             h4 {
@@ -117,9 +120,9 @@
                     width:230px;
                     height: auto;
                     padding:2rem;
-                    -webkit-overflow-scrolling: touch;
+                      -webkit-overflow-scrolling: touch;
                     &::-webkit-scrollbar {
-                      display: none;
+                        display: none;
                     }
                 }
                 img {
@@ -134,6 +137,12 @@
         }
 
         #contact {
+            .octopus {
+                /* right: -1000px; */
+                top: 200px;
+                width: 700px;
+                height: auto;
+            }
             background-position: 0 50px;
             background-size:120px;
             .button {
