--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -41,6 +41,7 @@
             text-align: center;
             article {
                 padding:0 1.8rem;
+                max-width: 100%;
             }
             aside {
                 padding:0;
