--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -122,9 +122,10 @@
                 .item {
                     flex: 0 0 auto;
                     margin-right: 3px;
-                    width:230px;
+                    width:280px;
                     height: auto;
                     padding:2rem;
+                    background-color: #02274a;
  
                 }
                 img {
