--- a/css/global.css
+++ b/css/global.css
@@ -890,9 +890,10 @@ footer.sm {
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
     margin-right: 3px;
-    width: 230px;
+    width: 280px;
     height: auto;
     padding: 2rem;
+    background-color: #02274a;
   }
   #portfolio .grid img {
     width: 100%;
