--- a/css/_header.scss
+++ b/css/_header.scss
@@ -66,9 +66,10 @@ header {
 
 nav {
 	margin:0;
+	padding-top: 1rem;
 	a {
 		padding: 1.6rem;
-		font-weight: 300;
+		font-weight: 600;
 		font-size: 1.4rem;
 		line-height: 1.6em;
 		margin-left: 3.2rem;
