--- a/css/global.css
+++ b/css/global.css
@@ -313,11 +313,12 @@ header .inner {
 
 nav {
   margin: 0;
+  padding-top: 1rem;
 }
 
 nav a {
   padding: 1.6rem;
-  font-weight: 300;
+  font-weight: 600;
   font-size: 1.4rem;
   line-height: 1.6em;
   margin-left: 3.2rem;
@@ -532,6 +533,7 @@ section h3 {
 
 #contact {
   overflow: hidden;
+  margin-bottom: 0;
 }
 
 #contact .octopus {
